# Aashvi-Budia

./: README.md  idd-new-simple-3.ipynb
Intro to ML/: clustering.ipynb  linear regression.ipynb  logistic regressions.ipynb
STM_Sensors/: README.md
STM_Sensors/platform IO project/src/: main.cpp  platformIO_RM.code-workspace
final_task/: README.MD  video-processor.ipynb
intermediate ros2/launch_ws/install/: setup.ps1  setup.zsh
intro to ros2/polygon_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
intro to ros2/polygon_ws/log/: latest_build
intro to ros2/polygon_ws/src/polygon_pkg_cpp/: CMakeLists.txt  package.xml
intro to ros2/polygon_ws/src/polygon_pkg_cpp/src/: client.cpp  service_server.cpp
intro to ros2/service_ws/install/: setup.sh
intro to ros2/service_ws/log/: latest_build  (+1 more)
polygon_srv/install/: local_setup.sh  setup.sh
polygon_srv/log/: latest_build
polygon_ws/install/: local_setup.sh  setup.sh  setup.zsh
polygon_ws/log/: latest_build
ros2_intermediate/: README.md
ros2_intermediate/urdf_ws/: frames_2025-02-16_10.07.37.gv
service_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
service_ws/log/: latest_build  latest_list
week1/: ques1  ques10  ques11  ques12  ques13  ques14  ques15  ques2  ques3  ques4  ques5  ques6  ques7  ques8  ques9
week_2/: Version control.pages  charactersort  q11.cpp  q13.cpp  q14.cpp  q15.cpp  q1charactersort.cpp  q2.cpp  q2mat  q2mat.cpp  ques10  ques10.cpp  ques12.cpp  ques3.cpp  ques4  ques4.cpp  ques5  ques5.cpp  ques6  ques6.cpp  ques7.cpp  ques8  ques8.cpp  ques9.cpp  temp
(+487 files in other folders)
